# skillset-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/tansive/skillset_sdk/: __init__.py  client.py  exceptions.py
tests/: test_client.py
