[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "tansive-skillset-sdk"
version = "0.1.0-alpha.1"
description = "Tansive SkillSet SDK"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Tansive, Inc.", email = "support@tansive.com"}
]
dependencies = [
    "requests>=2.25.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["automation", "sdk", "agents", "tansive"]

[project.urls]
Homepage = "https://github.com/tansive/skillset-sdk-python"
"Bug Reports" = "https://github.com/tansive/skillset-sdk-python/issues"
Source = "https://github.com/tansive/skillset-sdk-python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tansive*"]
namespaces = true
exclude = ["tests*", "testing*"]
